# gitsense-open-source-intelligence

./: .gitignore  LICENSE  README.md  demo.cpp  main.cpp
frontend/src/: App.tsx  index.css
frontend/src/components/: AiAssistant.tsx  RepoOverview.tsx  components.css
gitsense/: CMakeLists.txt  example_report.json  intelligence_temp.json
gitsense/include/: AIRemediation.h  ArchitectureAnalyzer.h  CodeQualityAnalyzer.h  DependencyAnalyzer.h  DocumentationAnalyzer.h  FileScanner.h  GitHistoryAnalyzer.h  LanguageDetector.h  LicenseAnalyzer.h  LocalServer.h  RepoAssistantEngine.h  RepoFetcher.h  ReportGenerator.h  SecurityAnalyzer.h  StructureAnalyzer.h  httplib.h
gitsense/src/: AIRemediation.cpp  ArchitectureAnalyzer.cpp  CodeQualityAnalyzer.cpp  DependencyAnalyzer.cpp  DocumentationAnalyzer.cpp  FileScanner.cpp  GitHistoryAnalyzer.cpp  LanguageDetector.cpp  LicenseAnalyzer.cpp  LocalServer.cpp  RepoAssistantEngine.cpp  RepoFetcher.cpp  ReportGenerator.cpp  SecurityAnalyzer.cpp  StructureAnalyzer.cpp  main.cpp
